--- a/src/App.scss
+++ b/src/App.scss
@@ -82,7 +82,7 @@ body {
 			background-color: rgb(7, 85, 24);
 		}
 
-		ul.jobList {
+		ul.jobsList {
 			li {
 				a {
 					color: rgb(177, 110, 33);
