--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,15 @@ body {
 			.bulkText {
 				font-size: 0.9rem;
 			}
+
+			ul.skillDefinitions {
+				margin: 10px 0 0 0;
+
+				li {
+					font-size: 1.1rem;
+					color: rgb(217, 217, 100);
+				}
+			}
 		}
 
 		.job.send {
@@ -89,6 +98,7 @@ body {
 				}
 			}
 		}
+
 
 	}
 }
